--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,17 +11,23 @@ dependencies:
   flutter:
     sdk: flutter
 #************************************************#
-  cupertino_icons:
+  cupertino_icons: ^1.0.2
+
   flutter_launcher_icons:
   connectivity_plus:
   flutter_swiper:
   flutter_native_splash:
   bloc: ^6.1.3
   flutter_bloc: ^6.1.3
-  extended_image:
-  sign_button:
+  photo_view: ^0.11.1
+  sign_button: ^1.0.2
   dio:  4.0.0-beta7
   equatable: ^2.0.0
+  firebase_core: ^1.0.1
+  firebase_auth: ^1.0.1
+  flutter_svg:
+  cloud_firestore: ^1.0.1
+
 
 #************************************************#
 dev_dependencies:
@@ -36,6 +42,7 @@ flutter:
 
   assets:
     - images/
+    - images/icons/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
