--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,14 +12,13 @@ dependencies:
     sdk: flutter
 #************************************************#
   cupertino_icons: ^1.0.2
-
+  flutter_inner_drawer: ^1.0.0+1
   flutter_launcher_icons:
   connectivity_plus:
   flutter_swiper:
   flutter_native_splash:
   bloc: ^6.1.3
   flutter_bloc: ^6.1.3
-  photo_view: ^0.11.1
   sign_button: ^1.0.2
   dio:  4.0.0-beta7
   equatable: ^2.0.0
@@ -27,6 +26,7 @@ dependencies:
   firebase_auth: ^1.0.1
   flutter_svg:
   cloud_firestore: ^1.0.1
+  extended_image: ^3.0.0
 
 
 #************************************************#
