--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -15,15 +15,15 @@ dependencies:
   flutter_inner_drawer: ^1.0.0+1
   flutter_launcher_icons:
   connectivity_plus:
-  flutter_swiper:
+  card_swiper: ^2.0.4
   flutter_native_splash:
-  bloc: ^6.1.3
-  flutter_bloc: ^6.1.3
-  sign_button: ^1.0.2
-  firebase_core: ^1.0.1
-  firebase_auth: ^1.0.1
+  bloc: ^7.0.0
+  flutter_bloc: ^7.0.0
+  sign_button: ^2.0.0
+  firebase_core:
+  firebase_auth:
   flutter_svg:
-  cloud_firestore: ^1.0.1
+  cloud_firestore:
   extended_image: ^3.0.0
 
 
